Makes little sense to describe this, complete plugin rework