@@ -1,14 +1,13 @@
 package me.gepronix.decaliumcustomitems.example.bag;
 
-import com.manya.decaliumcustomitems.event.*;
 import me.gepronix.decaliumcustomitems.event.*;
 import me.gepronix.decaliumcustomitems.item.Item;
 import me.gepronix.decaliumcustomitems.item.MetadataHolder;
-import me.gepronix.decaliumcustomitems.item.modifier.ItemModifier;
-import me.gepronix.decaliumcustomitems.item.modifier.ItemModifierImpl;
-import me.gepronix.decaliumcustomitems.item.WrappedStack;
+import me.gepronix.decaliumcustomitems.item.StackOfItems;
 import me.gepronix.decaliumcustomitems.item.meta.CustomMeta;
 import me.gepronix.decaliumcustomitems.item.meta.ItemMetaFactory;
+import me.gepronix.decaliumcustomitems.item.modifier.ItemModifier;
+import me.gepronix.decaliumcustomitems.item.modifier.ItemModifierImpl;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextDecoration;
@@ -23,13 +22,13 @@ import org.jetbrains.annotations.NotNull;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Bag implements Item, Triggerable, MetadataHolder {
     private final NamespacedKey key;
     private final Material original;
     private final ItemModifier modifier;
     private final EventTriggerHolder eventTriggerHolder = new EventTriggerHolderImpl();
+
     public Bag(Plugin plugin) {
         this.key = new NamespacedKey(plugin, "bag");
         this.original = Material.CHEST;
@@ -45,8 +44,8 @@ public class Bag implements Item, Triggerable, MetadataHolder {
     public void onInteract(PlayerInteractEvent event, ItemTriggerContext context) {
         ItemStack item = context.getItemStack();
 
-        if(!event.getAction().toString().startsWith("RIGHT_CLICK")) return;
-        WrappedStack stack = WrappedStack.of(item);
+        if (!event.getAction().toString().startsWith("RIGHT_CLICK")) return;
+        StackOfItems stack = StackOfItems.of(item);
         BagInventoryHolder holder = new BagInventoryHolder(
                 item,
                 stack.getCustomMeta()
@@ -55,17 +54,18 @@ public class Bag implements Item, Triggerable, MetadataHolder {
         );
         holder.open(event.getPlayer());
     }
+
     private List<Component> lore(LivingEntity entity, ItemStack item) {
         List<Component> lore = new ArrayList<>(Collections.singletonList(Component.text("Контент: ")
                 .decoration(TextDecoration.ITALIC, false)
                 .color(NamedTextColor.GRAY)));
-        WrappedStack stack = WrappedStack.of(item);
+        StackOfItems stack = StackOfItems.of(item);
         BagMeta meta = stack.getCustomMeta().map(BagMeta.class::cast).orElse(BagMeta.Factory.INSTANCE.createDefault());
-        lore.addAll(meta.content().subList(0, 5).stream().filter(i -> i.getType() != Material.AIR)
-                .map(s -> Component.text(s.getType().name() + " x"+s.getAmount())
+        List<ItemStack> content = meta.content().size() >= 5 ? meta.content().subList(0, 5) : meta.content();
+        lore.addAll(content.stream().filter(i -> i.getType() != Material.AIR)
+                .map(s -> Component.textOfChildren(Component.translatable(s.getType().getTranslationKey()), Component.text(" x "+s.getAmount()))
                         .decoration(TextDecoration.ITALIC, false)
-                        .color(NamedTextColor.GRAY))
-                .collect(Collectors.toList()));
+                        .color(NamedTextColor.GRAY)).toList());
         return lore;
     }
 
